# function_ytdlp

./: .gitignore  Dockerfile  Makefile  README.md  func.go  func.yaml  function_ytdlp.py  functionytdlp.yml  go.mod  go.sum  pyproject.toml  requirements.txt
backend/: Makefile  functionytdlp.yml
backend/functionytdlp/: handler.py
frontend/: Makefile  portal.yml
frontend/portal/: Dockerfile  package-lock.json
frontend2/: portal.yml
frontend2/portal/react/: package-lock.json  package.json
functionytdlp/: handler.py  requirements.txt
