[tool.poetry]
name = "function-ytdlp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "function_ytdlp"}]

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = "^2023.3.4"
boto3 = "^1.26.88"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
